--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,50 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.bgimage{
+  width:100%;
+  /*height:100%;*/
+  position:absolute;
+  z-index: -1;
+  top:0;
+  
+  
+}
+.bgimage::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  max-height: 1600px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: calc(50% + 300px) -200px ; /*38% */
+    background-image: url('http://neurolab.mcbs.group/local/templates/neurolab/assets/images/svg/s-mp-one-img-bg.svg');
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+}
+
+25% {
+    transform: scale(1.05);
+}
+50% {
+    transform: scale(1.1);
+}
+75% {
+    transform: scale(1.05);
+}
+100% {
+    transform: scale(1);
+}
 }
