--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -7,17 +7,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.bgimage{
+.main_bgimage{
   width:100%;
   /*height:100%;*/
   position:absolute;
   z-index: -1;
-  top:0;
-  
-  
+  top:0;  
 }
-.bgimage::before {
+.main_bgimage::before {
   content: "";
+  opacity: .7;
   position: absolute;
   z-index: -1;
   top: 0;
@@ -36,7 +35,7 @@ code {
     monospace;
 }
 
-@keyframes pulse {
+/*@keyframes pulse {
   0% {
     transform: scale(1);
 }
@@ -53,4 +52,4 @@ code {
 100% {
     transform: scale(1);
 }
-}
+}*/
