--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -26,7 +26,7 @@ body {
   max-height: 1600px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: calc(50% + 300px) -200px ; /*38% */
+  background-position: calc(50% + 350px) -200px ; /*38% */
     background-image: url('http://neurolab.mcbs.group/local/templates/neurolab/assets/images/svg/s-mp-one-img-bg.svg');
 }
 
@@ -66,7 +66,7 @@ code {
 }
 
 .react-select-dark__control{
-  background-color: #131313;
+  background-color: #13131333;
   color:white;
 }
 
