--- a/src/_styles/leaflet.css
+++ b/src/_styles/leaflet.css
@@ -1,6 +1,9 @@
-.leaflet-container{
+.leaflet-container, .leaflet-pane{
     height:100%;
+    width:100%;
 }
+
+#mapka { height: 100%; width:100%;}
 
 .leaflet-control-attribution.leaflet-control {
     display:none !important
