--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -31,6 +31,20 @@ body {
     background-image: url('http://neurolab.mcbs.group/local/templates/neurolab/assets/images/svg/s-mp-one-img-bg.svg');
 }
 
+.gray_lines::after {
+    pointer-events: none;
+    content:' ';
+    top:0px;
+    display: block;
+    position:absolute;
+    width:100%;
+    height:100%;
+    background-repeat:no-repeat;
+    background-position: 50% 100%;
+    background-image:url('http://neurolab.mcbs.group/local/templates/neurolab/assets/images/svg/s-technology-bg-lines.svg');
+  }
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -55,41 +69,6 @@ code {
 }
 }*/
 
-.react-select__control{
-  background-color: #ffffff;
-  color:black;
-}
-.react-select-dark__value-container{
-  color:white;
-}
-.react-select-dark__input-container, .react-select-dark__single-value{
-  color:white;
-}
-
-.react-select-dark__control{
-  background-color: #13131333;
-  color:white;
-}
-
-/*.react-select__menu,  .react-select__option{
-  background-color: #ffffff22;
-  color:black;
-}*/
-
-.react-select-dark__menu,  .react-select-dark__option{
-  background-color: #222222;
-  color:white;
-}
-
-
-.react-select-dark__option--is-focused, .react-select-dark__option--is-selected{
-  background-color: #206bc433;
-  color:white;
-}
-
-.react-select-dark__multi-value__remove{
-  background-color: gray;
-}
 
 /*react-select__option
 
