--- a/src/_styles/index.css
+++ b/src/_styles/index.css
@@ -48,6 +48,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    word-wrap: break-word;
+    /*max-width:100%;*/
 }
 
 /*@keyframes pulse {
