--- a/src/_styles/reactselect.css
+++ b/src/_styles/reactselect.css
@@ -1,11 +1,11 @@
 .react-select__control{
     background-color: #ffffff;
     color:black;
-    font-size:0.857rem;
+    font-size:0.75rem;/*0.857rem;*/
   }
 
   .react-select__control div{
-    font-size:0.857rem;
+    font-size:0.75rem;/*0.857rem;*/
   }
 
   .react-select-dark__value-container{
@@ -18,6 +18,7 @@
   .react-select-dark__control{
     background-color: #13131333;
     color:white;
+    font-size:0.75rem;
   }
   
   /*.react-select__menu,  .react-select__option{
@@ -42,6 +43,6 @@
   }
 
   .react-select__menu div, .react-select-dark__menu div{
-    font-size:0.857rem;
+    font-size:0.75rem;/*0.857rem;*/
   }
   
